# src/routes/routes.ts
@@ -16,6 +16,28 @@ import type { Request as ExRequest, Response as ExResponse, RequestHandler, Rout
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
+    "Protein": {
+        "dataType": "refAlias",
+        "type": {"dataType":"enum","enums":["Egg","Beef","Fish","Plantain + Fish","Chicken","Sardine","coleslaw"],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Combo": {
+        "dataType": "refAlias",
+        "type": {"dataType":"enum","enums":["Stir-Fried Spag + Sardine & Fried Fish","Stir-Fried Spag + Egg & Fried Fish","Stir-Fried Spag + Egg","Stir-Fried Spag + Beef","Stir-Fried Spag + Fish & Plantain","Stir-Fried Spag + Dodo & Beef"],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Cart": {
+        "dataType": "refObject",
+        "properties": {
+            "baseMeal": {"dataType":"string","required":true},
+            "proteins": {"dataType":"array","array":{"dataType":"refAlias","ref":"Protein"}},
+            "combo": {"ref":"Combo"},
+            "subtotal": {"dataType":"double","required":true},
+            "currency": {"dataType":"string","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "CartItem": {
         "dataType": "refObject",
         "properties": {
@@ -134,7 +156,7 @@ export function RegisterRoutes(app: Router) {
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         const argsMainController_addCart: Record<string, TsoaRoute.ParameterSchema> = {
-                b: {"in":"body","name":"b","required":true,"dataType":"any"},
+                b: {"in":"body","name":"b","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"combo":{"ref":"Combo"},"proteins":{"dataType":"array","array":{"dataType":"refAlias","ref":"Protein"}}}},
                 r: {"in":"request","name":"r","required":true,"dataType":"object"},
         };
         app.post('/main/cart/add',
@@ -164,26 +186,27 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        const argsMainController_place: Record<string, TsoaRoute.ParameterSchema> = {
-                b: {"in":"body","name":"b","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"deliveryAddress":{"dataType":"string"},"deliveryArea":{"ref":"DeliveryArea"},"deliveryType":{"dataType":"union","subSchemas":[{"dataType":"enum","enums":["pickup"]},{"dataType":"enum","enums":["delivery"]}],"required":true}}},
+        const argsMainController_createOrder: Record<string, TsoaRoute.ParameterSchema> = {
+                req: {"in":"request","name":"req","required":true,"dataType":"object"},
+                body: {"in":"body","name":"body","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"deliveryAddress":{"dataType":"string"},"deliveryArea":{"ref":"DeliveryArea"},"deliveryType":{"dataType":"union","subSchemas":[{"dataType":"enum","enums":["pickup"]},{"dataType":"enum","enums":["delivery"]}],"required":true}}},
                 r: {"in":"request","name":"r","required":true,"dataType":"object"},
         };
         app.post('/main/order',
             ...(fetchMiddlewares<RequestHandler>(MainController)),
-            ...(fetchMiddlewares<RequestHandler>(MainController.prototype.place)),
+            ...(fetchMiddlewares<RequestHandler>(MainController.prototype.createOrder)),
 
-            async function MainController_place(request: ExRequest, response: ExResponse, next: any) {
+            async function MainController_createOrder(request: ExRequest, response: ExResponse, next: any) {
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
             let validatedArgs: any[] = [];
             try {
-                validatedArgs = templateService.getValidatedArgs({ args: argsMainController_place, request, response });
+                validatedArgs = templateService.getValidatedArgs({ args: argsMainController_createOrder, request, response });
 
                 const controller = new MainController();
 
               await templateService.apiHandler({
-                methodName: 'place',
+                methodName: 'createOrder',
                 controller,
                 response,
                 next,
